[gd_scene load_steps=4 format=3 uid="uid://dpokyk6s0reer"]

[ext_resource type="Script" uid="uid://u8elcxml1ajc" path="res://Scripts/start.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bsnbgd5emvt4f" path="res://Graphics/title.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bpevmj5v53vb3" path="res://Graphics/start.png" id="3"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 8.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2")

[node name="StartButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Player name"

[node name="PlayerNameTextEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_default_cursor_shape = 0
text = "Player 1"

[node name="LevelLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Level"

[node name="Levels" type="ItemList" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
auto_height = true

[node name="HighScoreLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "High Scores"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "asdf"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "asd"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "asdf"

[connection signal="text_changed" from="HBoxContainer/VBoxContainer2/PlayerNameTextEdit" to="." method="set_current_player_name"]
